--- a/res/layout/second_main.xml
+++ b/res/layout/second_main.xml
@@ -22,10 +22,10 @@
                 android:background="@null"
                 android:text="Search" />
 
-            <TextView
+            <ImageView
                 android:id="@+id/searchresult"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:src="@drawable/tet" />
 
 </LinearLayout>
